server/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: boards-backend
  name: boards-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      run: boards-backend
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: boards-backend
    spec:
      containers:
      - image: kibin8008/kibin-boards-backend:latest
        name: boards-backend
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: boardsdb
  name: boardsdb
spec:

  selector:
    matchLabels:
      run: boardsdb
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: boardsdb
    spec:
      containers:
      - image: mongo
        name: boardsdb
        ports:
        - containerPort: 27017
        volumeMounts:
        - mountPath: /data/db
          name: mongo-boards-volume
          subPath: db
      volumes:
      - name: mongo-boards-volume
        persistentVolumeClaim:
          claimName: boardsclaim
