server/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: boards-backend
  name: boards-backend
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: boards-backend
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: boardsdb
  name: boardsdb
spec:
  ports:
  - port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    run: boardsdb
